# Turtle.AI_AgentCLI

./: .gitignore  CMakeLists.txt  README.md  README_EN.md
include/: config_manager.hpp  git_manager.hpp  http_client.hpp  mcp_manager.hpp  prompt.hpp  token_tracker.hpp  ui.hpp
opencode-cli/: CMakeLists.txt  README.md
opencode-cli/include/: config_manager.hpp  git_manager.hpp  http_client.hpp  mcp_manager.hpp  prompt.hpp  ui.hpp
opencode-cli/src/: config_manager.cpp  git_manager.cpp  http_client.cpp  main.cpp  mcp_manager.cpp  prompt.cpp  ui.cpp
src/: config_manager.cpp  git_manager.cpp  http_client.cpp  main.cpp  mcp_manager.cpp  prompt.cpp  token_tracker.cpp  ui.cpp
